[package]
name = "bbclient"
version = "0.1.0"
authors = ["TA Thanh Dinh <tathanhdinh@gmail.com>"]
edition = "2018"

[dependencies]
zydis = { git = "https://github.com/zyantific/zydis-rs"}
# gtk = { git = "https://github.com/gtk-rs/gtk", features = ["v3_22"] }
tabwriter = "1.1.0"
redis = "0.9.1"
structopt = "0.2.14"
strum = "0.12.0"
strum_macros = "0.12.0"
lazy_static = "1.2.0"
failure = "0.1.3"
scroll = "0.9.2"
lru = "0.1.11"
fasthash = "0.3.2"
xedsys = { path = "../../../xed-sys" }
maplit = "1.0.1"
indicatif = "0.10.3"